--- a/content/index.yml
+++ b/content/index.yml
@@ -3,8 +3,8 @@ seo:
   description: Boost your coding productivity with AI-driven insights that tell you when and how to code most efficiently.
 title: Build your landing with [Nuxt UI Pro]{.text-primary}
 description: Boost your coding productivity with AI-driven insights that tell you when and how to code most efficiently.
-headline: test text
 hero:
+  headline: test
   links:
     - label: Getting Started
       icon: i-lucide-arrow-right
