--- a/content/index.yml
+++ b/content/index.yml
@@ -4,7 +4,7 @@ seo:
 title: Build your landing with [Nuxt UI Pro]{.text-primary}
 description: Boost your coding productivity with AI-driven insights that tell you when and how to code most efficiently.
 hero:
-  headline: test
+  headline: Boost your coding productivity with AI-driven insights that tell you when and how to code most efficiently
   links:
     - label: Getting Started
       icon: i-lucide-arrow-right
