--- a/content/calc.yaml
+++ b/content/calc.yaml
@@ -1,8 +1,7 @@
 mile: 100
+stepUp: 4
+stepDown: 7
 types:
   - label: piano 1
     description: "Piano 1"
     price: 100
-steps:
-  - up: 4
-    down: 7
