--- a/content/index.yml
+++ b/content/index.yml
@@ -1,94 +1,103 @@
 seo:
-  title: Nuxt UI Pro - Landing template
-  description: Boost your coding productivity with AI-driven insights that tell you when and how to code most efficiently.
-title: Build your landing with [Nuxt UI Pro]{.text-primary}
-description: Boost your coding productivity with AI-driven insights that tell you when and how to code most efficiently.
+  title: Big Move? Better Call RHINO-MOVERS
+  description: Tell us about your move — we’ll reply promptly with a clear, flat‑rate estimate and timeline.
+title:  Big Move? Better Call [RHINO-MOVERS!]{.text-primary}
+description: Tell us about your move — we’ll reply promptly with a clear, flat‑rate estimate and timeline.
 hero:
-  headline: Boost your coding productivity with AI-driven insights that tell you when and how to code most efficiently
+  headline: Your Piano‑Moving Specialists — Plus Full-Service Heavy & Delicate Relocations
   links:
-    - label: Getting Started
-      icon: i-lucide-arrow-right
+    - label: Submit Request
+      icon: i-lucide-arrow-down
       trailing: true
       variant: subtle
-      to: https://ui.nuxt.com/getting-started/installation/pro/nuxt
-      target: _blank
+      to: '/#calc'
       size: xl
-    - label: Clone on GitHub
-      icon: i-simple-icons-github
-      size: xl
-      color: neutral
-      variant: ghost
-      to: https://github.com/nuxt-ui-pro/landing
-      target: _blank
 section:
-  title: '[Revolutionize]{.text-primary} your coding experience'
-  description: Transform your development workflow with AI-powered insights and personalized productivity optimization.
+  title: '[Piano Moving & Storage]{.text-primary} — Our Signature Service'
+  description: "At Rhino Movers, we take pride in being true piano‑moving experts. Whether you have an upright, baby grand, grand, or concert grand, our team and equipment are tailored for every model:"
+  postscriptum: Every piano move is handled by certified technicians who understand the sensitivities of soundboards, pinblocks, and legs. We coordinate with venue managers, orchestras, recital halls, and private owners — guaranteeing on‑time delivery and repositioning under any conditions.
   images:
-    mobile: '/images/macbook-mobile.svg'
-    desktop: '/images/macbook.svg'
+    mobile: '/images/piano.png'
+    desktop: '/images/piano.png'
   features:
-    - title: Optimize your focus time
-      description: Let AI identify your peak coding hours and adapt to your natural rhythm. Focus on what matters most - writing great code, while our system optimizes your productivity patterns.
-      class: border-l border-primary pl-4
-    - title: Track your best coding hours
-      description: Track when you code best with smart analytics. Get actionable insights to tackle challenging tasks during your peak performance hours.
+    - title: Upright Pianos & Spinet
+      description: Compact but heavy — we use low‑profile piano boards and heavy‑duty dollies to navigate tight hallways and stairs without damage.
+      class: border-l border-default pl-4
+    - title: Baby Grands & Medium Grands
+      description: Delicate balance and weight distribution require specialized padding, straps, and custom cradles to protect finish and frame.
       class: border-l border-default pt-4 pl-4
-    - title: Improve workflow efficiency
-      description: Automate your workflow optimization from code snippets to focus management. Ship better code faster with a streamlined development process.
+    - title: Full‑Size Grands & Concert Grands
+      description: From foyer to stage, our hydraulic lifts, ramp systems, and multiple‑man lifting teams ensure the safest possible handling for these most priceless instruments.
+      class: border-l border-default pt-4 pl-4
+    - title: Climate‑Controlled Storage
+      description: Short- or long‑term options in our secure warehouse keep humidity, temperature, and dust at ideal levels to preserve soundboard integrity.
       class: border-l border-default pt-4 pl-4
 features:
-  title: Take control of your [productivity]{.text-primary}
-  description: Make every coding session count with smart analytics and workflow optimization.
+  title: Additional Items [We Move]{.text-primary}
   features:
-    - title: AI-Powered Focus Tracking
-      description: Discover your optimal coding hours with real-time AI analysis of your productivity patterns.
-      icon: i-lucide-wand-sparkles
+    - title: Safes (light to ultra‑heavy)
+      # description: Discover your optimal coding hours with real-time AI analysis of your productivity patterns.
+      icon: teenyicons:safe-outline
       ui:
         leading: bg-accented/50 p-2 rounded-md border border-muted border-dashed
-    - title: Distraction Alerts
-      description: Get notified when your focus drifts and bring your attention back.
-      icon: i-lucide-bell-ring
+    - title: Hot Tubs & Spa Equipment
+      # description: Get notified when your focus drifts and bring your attention back.
+      icon: material-symbols:hot-tub-sharp
       ui:
         leading: bg-accented/50 p-2 rounded-md border border-muted border-dashed
-    - title: Smart Code Snippets
-      description: Save and reuse frequently used code blocks for efficiency.
-      icon: i-lucide-code-xml
+    - title: Vending Machines
+      # description: Save and reuse frequently used code blocks for efficiency.
+      icon: game-icons:vending-machine
       ui:
         leading: bg-accented/50 p-2 rounded-md border border-muted border-dashed
-    - title: Deep Work Mode
-      description: Block distractions and set structured coding sessions with built-in Pomodoro timers.
-      icon: i-lucide-moon
+    - title: Medical & Office Equipment
+      # description: Block distractions and set structured coding sessions with built-in Pomodoro timers.
+      icon: medical-icon:i-cath-lab
       ui:
         leading: bg-accented/50 p-2 rounded-md border border-muted border-dashed
-    - title: Collaborative Insights
-      description: Sync your workflow with teammates and see when they are most productive.
-      icon: i-lucide-mouse-pointer-2
+    - title: Speakers & Road Cases
+      # description: Sync your workflow with teammates and see when they are most productive.
+      icon: material-symbols:mobile-speaker-outline
       ui:
         leading: bg-accented/50 p-2 rounded-md border border-muted border-dashed
-    - title: Performance Analytics
-      description: Track your coding metrics and get insights to boost your speed and code quality.
-      icon: i-lucide-chart-line
+    - title: Restaurant & Commercial Machinery
+      # description: Track your coding metrics and get insights to boost your speed and code quality.
+      icon: material-symbols:table-restaurant-outline-sharp
+      ui:
+        leading: bg-accented/50 p-2 rounded-md border border-muted border-dashed
+    - title: Large Appliances (up to 2,200 lbs)
+      # description: Track your coding metrics and get insights to boost your speed and code quality.
+      icon: streamline:food-kitchenware-microwave-cook-food-appliances-cooking-nutrition-appliance-microwave
+      ui:
+        leading: bg-accented/50 p-2 rounded-md border border-muted border-dashed
+    - title: Arcade & Game Machines
+      # description: Track your coding metrics and get insights to boost your speed and code quality.
+      icon: icon-park-outline:game-console-one
+      ui:
+        leading: bg-accented/50 p-2 rounded-md border border-muted border-dashed
+    - title: Custom Single‑Item Requests
+      # description: Track your coding metrics and get insights to boost your speed and code quality.
+      icon: streamline:ecology-science-planet-solar-system-ring-planet-saturn-space-astronomy
       ui:
         leading: bg-accented/50 p-2 rounded-md border border-muted border-dashed
 steps:
-  title: Start coding smarter in [3 steps]{.text-primary}
-  description: Transform your development workflow with our AI-powered assistant.
+  title: Our Core [Moving Services]{.text-primary}
   items:
-    - title: Connect Your IDE
-      description: Seamlessly integrate with VS Code, JetBrains, or your preferred editor. Get started in under 2 minutes with zero configuration needed.
+    - title: Specialty & Rigging Moves
+      description: Heavy, fragile, or high‑value items — from safes and hot tubs to industrial machinery — moved with professional rigging, full safety compliance, and specialized gear.
       image:
-        light: '/images/light/connect.svg'
-        dark: '/images/dark/connect.svg'
-    - title: Track & Analyze
-      description: Our AI silently monitors your coding patterns to identify your peak productivity hours and potential workflow bottlenecks.
+        light: '/images/IMG_2925.JPG'
+        dark: '/images/IMG_2925.JPG'
+    - title: Small‑Scale Moves
+      description: Studio apartments, storage units, home offices, or single bulky items — we bring the same attention to detail, no matter the load.
       image:
-        light: '/images/light/optimize.svg'
-        dark: '/images/dark/optimize.svg'
-    - title: Optimize & Code Smarter
+        light: '/images/move.png'
+        dark: '/images/move.png'
+    - title: Local & Long‑Distance Relocations
       description: Receive personalized recommendations to enhance your coding efficiency. Watch your productivity soar with data-driven insights.
       image:
-        light: '/images/light/track.svg'
-        dark: '/images/dark/track.svg'
+        light: '/images/move02.JPG'
+        dark: '/images/move02.JPG'
 pricing:
   title: Choose your [productivity]{.text-primary} path
   description: Unlock AI-powered coding efficiency with our flexible plans. Whether you're a solo developer or part of a team, we have the perfect toolset to maximize your development workflow.
@@ -160,3 +169,26 @@ cta:
       trailingIcon: i-lucide-circle-help
       target: _blank
       variant: subtle
+whywe:
+  title: Why Choose [Rhino Movers]{.text-primary}
+  features:
+    - title: 'Dedicated Piano Team: Over a decade of specialized experience with every piano type and venue.'
+      # description: Discover your optimal coding hours with real-time AI analysis of your productivity patterns.
+      icon: game-icons:grand-piano
+      ui:
+        leading: bg-accented/50 p-2 rounded-md border border-muted border-dashed
+    - title: 'State‑of‑the‑Art Equipment: Hydraulic lifts, custom cradles, climate‑controlled trailers, and secure storage.'
+      # description: Discover your optimal coding hours with real-time AI analysis of your productivity patterns.
+      icon: material-symbols:forklift-rounded
+      ui:
+        leading: bg-accented/50 p-2 rounded-md border border-muted border-dashed
+    - title: 'Fully Insured & Licensed: Peace of mind from pick‑up to delivery.'
+      # description: Discover your optimal coding hours with real-time AI analysis of your productivity patterns.
+      icon: map:insurance-agency
+      ui:
+        leading: bg-accented/50 p-2 rounded-md border border-muted border-dashed
+    - title: 'White‑Glove Service: Protective wrapping, floor runners, and on‑site coordination with venue staff.'
+      # description: Discover your optimal coding hours with real-time AI analysis of your productivity patterns.
+      icon: icon-park-outline:clothes-gloves
+      ui:
+        leading: bg-accented/50 p-2 rounded-md border border-muted border-dashed
