--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "typecheck": "nuxt typecheck"
   },
   "dependencies": {
+    "@compodium/nuxt": "0.1.0-beta.9",
     "@iconify-json/lucide": "^1.2.39",
     "@iconify-json/simple-icons": "^1.2.33",
     "@nuxt/content": "^3.5.1",
     "@nuxt/image": "^1.10.0",
     "@nuxt/ui-pro": "^3.1.0",
+    "@nuxtjs/storybook": "8.3.3",
     "nuxt": "^3.16.2"
   },
   "devDependencies": {
