--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@nuxt/content": "^3.5.1",
     "@nuxt/image": "^1.10.0",
     "@nuxt/ui-pro": "^3.1.0",
-    "@nuxtjs/storybook": "8.3.3",
+    "nodemailer": "^6.10.1",
     "nuxt": "^3.16.2"
   },
   "devDependencies": {
