--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-ui-pro-template-landing",
+  "name": "rhino-movers.com",
   "private": true,
   "type": "module",
   "scripts": {
