--- a/content/index.yml
+++ b/content/index.yml
@@ -1,8 +1,8 @@
 seo:
   title: Rhino Piano Movers
-  description: Tell us about your move — we’ll reply promptly with a clear, flat‑rate estimate and timeline.
+  description: Tell us about your move — we’ll reply promptly with a clear, flat‑rate estimate and timeline
 title: Big Move? Better Call [RHINO-MOVERS!]{.text-primary}
-description: Tell us about your move — we’ll reply promptly with a clear, flat‑rate estimate and timeline.
+description: Tell us about your move — we’ll reply promptly with a clear, flat‑rate estimate and timeline
 hero:
   headline: Your Piano‑Moving Specialists — Plus Full-Service Heavy & Delicate Relocations
   links:
