--- a/content/index.yml
+++ b/content/index.yml
@@ -1,7 +1,7 @@
 seo:
   title: Rhino Piano Movers
   description: Tell us about your move — we’ll reply promptly with a clear, flat‑rate estimate and timeline.
-title: Big Move? Better Call [RHINO-MOVERS!]{.text-primary}
+title: Big Move? Call [RHINO  PIANO MOVERS!]{.text-primary
 description: Tell us about your move — we’ll reply promptly with a clear, flat‑rate estimate and timeline.
 hero:
   headline: Your Piano‑Moving Specialists — Plus Full-Service Heavy & Delicate Relocations
@@ -90,7 +90,7 @@ steps:
         light: /images/move02.JPG
         dark: /images/move02.JPG
 whywe:
-  title: "Why Choose [Rhino\_Movers]{.text-primary}"
+  title: "Why Choose [Rhino\_Piano Movers]{.text-primary}"
   features:
     - title: 'Dedicated Piano Team: Over a decade of specialized experience with every piano type and venue.'
       icon: game-icons:grand-piano
@@ -108,3 +108,9 @@ whywe:
       icon: icon-park-outline:clothes-gloves
       ui:
         leading: bg-accented/50 p-2 rounded-md border border-muted border-dashed
+cta:
+  links: []
+testimonials:
+  items: []
+pricing:
+  plans: []
