--- a/content/index.yml
+++ b/content/index.yml
@@ -1,7 +1,7 @@
 seo:
   title: Rhino Piano Movers
   description: Tell us about your move — we’ll reply promptly with a clear, flat‑rate estimate and timeline.
-title: Big Move? Call [RHINO  PIANO MOVERS!]{.text-primary
+title: Big Move? Call [RHINO  PIANO MOVERS!]{.text-primary}
 description: Tell us about your move — we’ll reply promptly with a clear, flat‑rate estimate and timeline.
 hero:
   headline: Your Piano‑Moving Specialists — Plus Full-Service Heavy & Delicate Relocations
